--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,4 @@
-    FROM php:7.0-fpm  
+    FROM php:7.0-fpm
     RUN docker-php-ext-install pdo pdo_mysql
     RUN apt update
     RUN apt upgrade -y
@@ -7,6 +7,5 @@
     RUN HASH=`curl -sS https://composer.github.io/installer.sig`
     RUN php -r "if (hash_file('SHA384', '/tmp/composer-setup.php') === '$HASH') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
     RUN php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
-    CMD composer update
-    CMD composer dump-autoload
-    CMD bash
+    CMD composer install
+    ENTRYPOINT bash
