Added upstream definition to nginx conf. Fixed php service not communicating with nginx service

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,9 @@
+upstream dynamic {
+    zone upstream_dynamic 64k;
+
+    server php:9000;
+}
+
 server {  
 
      listen 80 default_server;  
@@ -22,7 +28,7 @@ server {
 
      location ~ .php$ {  
       fastcgi_split_path_info ^(.+.php)(/.+)$;  
-      fastcgi_pass php:9000;  
+      fastcgi_pass dynamic;  
       fastcgi_index index.php;  
       include fastcgi_params;  
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  
