--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -7,5 +7,4 @@
     RUN HASH=`curl -sS https://composer.github.io/installer.sig`
     RUN php -r "if (hash_file('SHA384', '/tmp/composer-setup.php') === '$HASH') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
     RUN php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
-    CMD composer install
-    ENTRYPOINT bash
+    CMD ["sh", "./docker-entrypoint.sh"]
