Changed DateTime default timezone to Edmonton, will make dynamic soon tm. Added google calendar to google client scope. Added php calendar library.

--- a/www/html/composer.json
+++ b/www/html/composer.json
@@ -15,7 +15,7 @@
         "ext-pdo_mysql": "*",
         "ext-pdo": "*",
         "google/apiclient": "^2.0",
-        "opis/closure": "^3.6"
+        "benhall14/php-calendar": "^1.4"
     },
     "scripts": {
         "pre-install-cmd": [
