--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -7,4 +7,5 @@
     RUN HASH=`curl -sS https://composer.github.io/installer.sig`
     RUN php -r "if (hash_file('SHA384', '/tmp/composer-setup.php') === '$HASH') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
     RUN php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+    RUN ln -fs /usr/share/zoneinfo/America/Edmonton /etc/localtime && dpkg-reconfigure -f noninteractive tzdata
     CMD ["sh", "./docker-entrypoint.sh"]
