--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
     FROM nginx:latest   
     COPY ./default.conf /etc/nginx/conf.d/default.conf
-    COPY /etc/letsencrypt/live/journalr.ca/fullchain.pem /etc/nginx/conf.d/fullchain.pem
-    COPY /etc/letsencrypt/live/journalr.ca/privkey.pem /etc/nginx/conf.d/privkey.pem
+    COPY ./fullchain.pem /etc/nginx/conf.d/fullchain.pem
+    COPY ./privkey.pem /etc/nginx/conf.d/privkey.pem
