Changed ssl config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,8 +6,7 @@ upstream dynamic {
 
 server {  
 
-      listen 443 default_server;
-      ssl on;
+      listen 443 ssl;
       ssl_certificate /etc/nginx/conf.d/fullchain.pem;
       ssl_certificate_key /etc/nginx/conf.d/privkey.pem;
      
