--- a/www/html/composer.json
+++ b/www/html/composer.json
@@ -14,8 +14,7 @@
     "require": {
         "ext-pdo_mysql": "*",
         "ext-pdo": "*",
-        "google/apiclient": "^2.0",
-        "benhall14/php-calendar": "^1.4"
+        "google/apiclient": "^2.0"
     },
     "scripts": {
         "pre-install-cmd": [
