--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,9 +4,67 @@ upstream dynamic {
     server php:9000;
 }
 
+server {
+    listen 80 default_server;
+    access_log off;
+    error_log off;
+
+    return 301 https://$host$request_uri;
+}
+
 server {  
 
       listen 443 ssl;
+      server_name journalr.ca;
+      ssl_certificate /etc/nginx/conf.d/fullchain.pem;
+      ssl_certificate_key /etc/nginx/conf.d/privkey.pem;
+
+      root /var/www/html;  
+      index index.html index.php;  
+
+      charset utf-8;  
+
+      location / {  
+      try_files $uri $uri/ /index.php?$query_string;  
+     }  
+
+     location = /favicon.ico { access_log off;
+      log_not_found off;
+     }  
+     
+     location = /robots.txt { access_log off;
+      log_not_found off;
+     }  
+
+     access_log off;  
+     error_log /var/log/nginx/error.log error;  
+
+     sendfile off;  
+
+     client_max_body_size 100m;  
+
+     location ~ .php$ {  
+      fastcgi_split_path_info ^(.+.php)(/.+)$;  
+      fastcgi_pass dynamic;  
+      fastcgi_index index.php;  
+      include fastcgi_params;  
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  
+      fastcgi_intercept_errors off;  
+      fastcgi_buffer_size 16k;  
+      fastcgi_buffers 4 16k;  
+    }  
+
+     location ~ /.ht {  
+      deny all;  
+     }  
+} 
+
+
+
+server {  
+
+      listen 443 ssl;
+      server_name localhost;
       ssl_certificate /etc/nginx/conf.d/fullchain.pem;
       ssl_certificate_key /etc/nginx/conf.d/privkey.pem;
      
@@ -20,8 +78,14 @@ server {
       try_files $uri $uri/ /index.php?$query_string;  
      }  
 
-     location = /favicon.ico { access_log off; log_not_found off; }  
-     location = /robots.txt { access_log off; log_not_found off; }  
+     location = /favicon.ico { access_log off;
+      log_not_found off;
+     }  
+     
+     location = /robots.txt { access_log off;
+      log_not_found off;
+     }  
+
 
      access_log off;  
      error_log /var/log/nginx/error.log error;  
@@ -45,7 +109,6 @@ server {
       deny all;  
      }  
     } 
-
 # server {  
 
 #      listen 80 default_server;  
